// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-crXcEl iMxyql"
>
  <header
    className="sc-evZas enJGlr"
  >
    <h3
      className="sc-breuTD grZObW"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-fnykZs kTXhfu"
  >
    <tbody>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-crXcEl iMxyql"
>
  <header
    className="sc-evZas enJGlr"
  >
    <h3
      className="sc-breuTD grZObW"
    >
      This is a title
    </h3>
    <h4
      className="sc-ksZaOG jZzZfR"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-fnykZs kTXhfu"
  >
    <tbody>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-crXcEl iMxyql"
>
  <header
    className="sc-evZas enJGlr"
  >
    <h3
      className="sc-breuTD grZObW"
    >
      This is a title
    </h3>
    <h4
      className="sc-ksZaOG jZzZfR"
    >
      Subtitle
    </h4>
    <div
      className="sc-hAZoDl hQsGXN"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-fnykZs kTXhfu"
  >
    <tbody>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-crXcEl iMxyql"
>
  <header
    className="sc-evZas enJGlr"
  >
    <h3
      className="sc-breuTD grZObW"
    >
      This is a title
    </h3>
    <div
      className="sc-hAZoDl hQsGXN"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-fnykZs kTXhfu"
  >
    <tbody>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-fEOsli hytzoK"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
